--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-datepicker": "^9.1.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
+    "socket.io-client": "^4.8.3",
     "viem": "^2.38.6",
     "wagmi": "^2.19.2"
   },
